lldpd (0.8.0)
  * Change:
    + For Linux, switch to libnl3. Be aware of the licensing issues in
      case of static linking.

lldpd (0.7.17)
  * Fix:
    + Fix an infinite loop when using veth on Linux 4.1+ kernels.
    + Make CDP advertise the appropriate kernel name as platform,
      not just "Linux".
  * Change:
    + Fix the way libevent configure is called.

lldpd (0.7.16)
  * Change:
    + For Linux, 2.6.32 is now the minimal required kernel. When using
      an older kernel, use `--enable-oldies`.
    + For Linux, use netlink to retrieve information about bridges,
      VLAN and bonds. The code was contributed by Cumulus Networks.
  * Features:
    + Use symbol versioning for liblldpctl.so.
    + Ability to get local chassis information with "show
      chassis".
    + The library also has the same ability with the
      `lldpctl_get_local_chassis()` function. It is also possible to
      get a chassis atom from a port with `lldpctl_k_port_chassis`
      key. This is now the preferred way to retrieve chassis related
      information.
  * Fix:
    + Fix build on OS X.
    + Accept "language" when configuring MED location as a civic address.

lldpd (0.7.15)
  * Features:
    + Optional features can be configured with "auto" to autodetect if
      they are usable. This is the default value for JSON and XML support.
    + Ability to send and decode custom/unknown TLV. Thanks to Alexandru
      Ardelean.
  * Change:
    + Modify checksum function. While this should be strictly
      equivalent, if you notice CDP packets not accepted anymore, this
      change is the first culprit.

lldpd (0.7.14)
  * Features:
    + Shutdown LLPDU are sent on MSAP change and when lldpd exits.
    + When an exact IP is provided as a management pattern, use it
      unconditionally.
    + Ability to set port ID and description to an arbitrary value,
      thanks to Alexandru Ardelean.
  * Fix:
    + Incorrect boundary check when decoding management address and